# VHAP

./: .gitignore  CITATION.cff  README.md  pyproject.toml
asset/flame/: uv_masks.npz
doc/: monocular.md  nersemble.md  nersemble_v2.md
jobs/: combine_nersemble.sh  run_monocular.sh  run_nersemble.sh
vhap/: combine_nerf_datasets.py  export_as_nerf_dataset.py  flame_editor.py  flame_viewer.py  generate_flame_uvmask.py  preprocess_video.py  track.py  track_nersemble.py  track_nersemble_v2.py
vhap/config/: base.py  nersemble.py  nersemble_v2.py
vhap/data/: image_folder_dataset.py  nerf_dataset.py  nersemble_dataset.py  nersemble_v2_dataset.py  video_dataset.py
vhap/model/: flame.py  tracker.py
vhap/util/: camera.py  color_correction.py  landmark_detector_fa.py  landmark_detector_star.py  log.py  mesh.py  render_nvdiffrast.py  render_uvmap.py  visualization.py
